2004-07-05  Jp Calderone  <exarkun@twistedmatrix.com>

	* bin/newtexaco, twisted/scripts/newtexaco.py: sendmail replacement

2003-07-04  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_enterprise.py: add sqlite. more tests.
	Add Postgres test.

	* twisted/enterprise/util.py: fix bug in getKeyColumn

	* twisted/enterprise/sqlreflector.py: clean up imports

	* twisted/enterprise/row.py: clean up imports

	* twisted/enterprise/reflector.py: clean up imports

2004-07-04  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/python/dir.c: Wrapper around opendir(3), readdir(3),
	and scandir(3) for use by twisted.python.plugins.

2003-07-03  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/news/database.py: NewsShelf.articleRequest() and
	NewsShelf.bodyRequest() now expected to return a file-like object
	in the last position of its returned three-tuple.  The old API
	is still supported, but deprecated.

2003-07-03  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_enterprise.py: add gadfly test

	* twisted/web/woven/input.py: remove excess newline.

	* twisted/trial/unittest.py: take out unused methodPrefix var

	* twisted/enterprise/adbapi.py: accept 'noisy' kw arg. persist
	noisy, min, and max args. just warn about non-dbapi db libs.

	* twisted/enterprise/reflector.py: fix spelling

	* twisted/enterprise/sqlreflector.py 80 columns, don't addToCache
	in insertRow

	* twisted/enterprise/xmlreflector.py: 80 columns

2003-07-01  Brian Warner  <warner@lothar.com>

	* sandbox/warner/fusd_twisted.py: experimental glue code for FUSD,
	a system for implementing Linux device drivers in userspace

2003-06-27  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.6rc3. Fixed a security bug in
	twisted.web.

	* .: Releasing Twisted 1.0.6rc4. One more twisted.web bug.

	* .: Releasing Twisted 1.0.6.

2003-06-26  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.0.6rc1.
