@@ -1,3 +1,8 @@
+2003-07-05  Itamar Shtull-Trauring  <itamar@itamarst.org>
+
+	* twisted/web/soap.py: Now requires SOAPpy v0.10.1, allow subclasses
+	to determine method publishing strategy.
+
 2004-07-05  Jp Calderone  <exarkun@twistedmatrix.com>
 
 	* bin/newtexaco, twisted/scripts/newtexaco.py: sendmail replacement
